added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -16,9 +17,10 @@
 
         <h2>HTML</h2>
      <ul>
+       <li>HyperText Markup Language: foundation to a webpage, think of foundation to a house</li>
        <li>The head element contains information about the webpage.</li>
        <li>The body element represents the visible content shown to the user.</li>
-       <li>HTML is the foundation to a webpage, think of foundation to a house</li>
+       <li>HTML makes websites readable and easy to use; adds structure to the content of a webpage</li>
      </ul>
 
       </section>
@@ -27,7 +29,16 @@
 
         <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>Cascading Style Sheets: language used by developers to define how webpage content is presented to users</li>
+        <li>CSS defines the colors, aesthetics, visual layout, and organization</li>
+        <li>Inline CSS - style an element directly in the HTML file; useful for quick and permanent changes</li>
+        <li>Example of inline css is using style attribute to change the color of a single heading</li>
+        <li>internal style sheet - contains CSS rules for the webpage in the head section of the HTML file</li>
+        <li>External CSS Style Sheet - most common way to style a webpage; preferred in most cases because it allows
+            developers to keep all their CSS rules in a separate file (use of "link" element)
+        </li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
       </ul>
    
       </section>
