--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <li>JavaScript - adds interactivity to website</li>
         <li>High-level dynamic programming language that allows users to interact with websites</li>
         <li>Critial tool in every web developers tool kit</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
       </ul>
    
       </section>
